fix tags active z-index

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -267,7 +267,7 @@ body
   position: absolute
   top: 0
   left: 0
-  z-index: 3
+  z-index: 10
   transform: translate(-100%, 0)
   transition-duration: .4s
   height: 100vh
